# mapm

./: CMakeLists.txt  FindMAPM.cmake  Makefile  README  dist.info  libmapm.def  mkdemo  mklib
WINDOWS_DOS/: mkallmsc.bat
